fix news and admin management alignment

--- a/src/components/adminContent/adminList/adminList.css
+++ b/src/components/adminContent/adminList/adminList.css
@@ -6,7 +6,7 @@
 .adminContainer{
     position: absolute;
     /* width: 900px; */
-    padding: 100px 100px;
+    padding: 100px 200px;
     width: 80%;
 }
 .titleAdmin{
