--- a/src/components/adminContent/newsList/newsList.css
+++ b/src/components/adminContent/newsList/newsList.css
@@ -6,7 +6,7 @@
 .newsContainer{
     position: absolute;
     width: 900px;
-    padding: 0px 100px;
+    padding: 0px 200px;
     width: 80%;
 
 }
